# wpp

./: .gitignore  AGENTS.md  CLAUDE.md  WPP结构设计.md  WPP调研报告.md
.claude/: note-agent.md  note-memory.md  note-skills.md  settings.json  常用mcp.md
desktop/: .gitignore  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json
desktop_old/: .env.development  electron-builder.yml  electron.vite.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
server/: config.yaml  config.yaml.example  pyproject.toml
server/deploy/: README.md  deploy.sh  health_check.sh  init.sh  rollback.sh
server/deploy/nginx/: nginx.conf
server/deploy/script/: deploy_init.sh  deploy_remote.sh
server/deploy/supervisor/: tg-download.conf
server/src/app/: main.py
server/src/app/api/: user_dependencies.py
server/src/app/api/callback/: test_pay_callback.py
server/src/app/api/client/: __init__.py  auth_client.py  counter_client.py  order_client.py  quota_client.py  subscription_client.py
server/src/app/api/system/: health.py
server/src/app/constants/: __init__.py  auth.py  counter.py  order.py  subscription.py
server/src/app/core/: config.py  database.py  redis.py  singleton.py
server/src/app/exceptions/: common_exception.py
server/src/app/i18n/: __init__.py  common_code.py  dependencies.py  translator.py
server/src/app/i18n/locales/: en-US.json  ja-JP.json  ko-KR.json  zh-CN.json  zh-TW.json
server/src/app/init/: database_schema_20260122_165618.sql  export_database_schema.py  init_db.py  sql_executor.py  sync_database_schema.py
server/src/app/middleware/: __init__.py  cross_origin.py  error_handling.py  request_logging.py
server/src/app/models/: __init__.py  base.py  callback_log_model.py  order_model.py  subscription_model.py  subscription_model.pyi  user_model.py
server/src/app/provider/payment/: payment_base.py  payment_manage.py  payment_mock.py
server/src/app/schemas/: __init__.py  callback_schema.py  client_user_schema.py  health_schema.py  order_schema.py  quota_schema.py  subscription_schema.py  user_schema.py
server/src/app/services/: base_service.py  callback_service.py  captcha_service.py  counter_service.py  email_verification_service.py  order_service.py  payment_service.py  quota_service.py  subscription_service.py  user_auth_service.py  user_service.py  user_token_service.py
server/src/app/templates/: email_verification.html
server/src/app/utils/: common.py  crypto.py  email_sender.py  ip_block_manager.py  jwt.py  logger.py  redis_fixed_limiter.py  redis_key.py  redis_lock.py  redis_queue.py  redis_rate_limiter.py  response.py  time.py
server/tests/: conftest.py
(+153 files in other folders)
